# backend/internal/data/ent/schema/user.go
@@ -78,6 +78,11 @@ func (User) Edges() []ent.Edge {
 			Annotations(entsql.Annotation{
 				OnDelete: entsql.Cascade,
 			}),
+		// homebox-fork: qr-login
+		edge.To("qr_login_tokens", QRLoginTokens.Type).
+			Annotations(entsql.Annotation{
+				OnDelete: entsql.Cascade,
+			}),
 		edge.To("api_keys", APIKey.Type).
 			Annotations(entsql.Annotation{
 				OnDelete: entsql.Cascade,
